Fixes after running on mobile

--- a/themes/gokarna/static/css/main.css
+++ b/themes/gokarna/static/css/main.css
@@ -370,6 +370,8 @@ main#content .post {
   border-radius: inherit;
   opacity: 0.8;
   padding: 6px;
+  position: relative;
+  z-index: -1;
 }
 
 @media only screen and (max-width: 820px) {
